# Clareza

./: .eslintignore  .gitignore  ProjectGuide.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: auto-tag.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checks.rs  commands.rs  errors.rs  gemini.rs  lib.rs  main.rs  models.rs  utils.rs
src/components/: DependencyCheck.tsx  Editor.tsx  ExportModal.tsx  Header.tsx  NewDocumentModal.tsx  Sidebar.tsx  TerminalView.tsx  ToastNotifications.tsx  WelcomeScreen.tsx  export-modal.tsx
src/constants/: index.ts  prompts.ts
src/hooks/: useFileHandler.ts  useToast.ts
src/services/: fileService.ts
src/types/: index.ts
