# src-tauri/Cargo.toml

[package]
name = "clareza"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-updater = "2"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
fs4 = "0.7"  # For file locking
encoding_rs = "0.8"  # For encoding detection
mime_guess = "2.0"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
once_cell = "1.21.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
